# winvm-mcp

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  pyproject.toml
docs/: ARCHITECTURE.md  SETUP-WINDOWS-VM.md  THREAT-MODEL.md  TOOL-REFERENCE.md
guest-bootstrap/: 00-base.ps1  10-kernel-debug.ps1  20-windbg.ps1  30-livekd-launcher.ps1
src/winvm_mcp/: __init__.py  __main__.py  config.py  errors.py  log.py  server.py
src/winvm_mcp/debug/: __init__.py  kd_engine.py  kd_parse.py
src/winvm_mcp/tools/: __init__.py  analyze.py  guest.py  kd.py  shell.py  snapshot.py  vm.py  vuln.py
src/winvm_mcp/transports/: __init__.py  ssh.py  vmrun.py
tests/: conftest.py  test_config.py  test_handshake.py  test_kd_engine.py  test_kd_parse.py  test_ssh_powershell.py  test_tools_registry.py  test_vmrun_args.py
